# xx-cli

./: .clang-format  .gitignore  .xx.toml  .xx.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  install.sh  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  release.yml  testing.yml
dockerfiles/ubuntu-clean-install/: .xx.yaml  Dockerfile  get.sh
tests/: CMakeLists.txt
tests/src/: command.cpp  executor.cpp  helpers.cpp  luavm.cpp  parser.cpp  planner.cpp  renderer.cpp
tests/src/renderers/: inja_renderer.cpp
xx/: CMakeLists.txt
xx-lib/: CMakeLists.txt
xx-lib/include/: xxlib.hpp
xx-lib/include/detail/: command.hpp  executor.hpp  helpers.hpp  luavm.hpp  parser.hpp  planner.hpp  platform.hpp  renderer.hpp  tempfile.hpp  updates.hpp
xx-lib/include/detail/executors/: dotnet_run_executor.hpp  lua_executor.hpp  platform_executor.hpp
xx-lib/include/detail/luavm_modules/: luavm_cpr.hpp  luavm_fs.hpp  luavm_json.hpp
xx-lib/include/detail/renderers/: inja_renderer.hpp
xx-lib/src/: xxlib.cpp
xx-lib/src/detail/: command.cpp  executor.cpp  helpers.cpp  luavm.cpp  parser.cpp  platform.cpp  renderer.cpp  updates.cpp
xx-lib/src/detail/executors/: dotnet_run_executor.cpp  lua_executor.cpp  platform_executor_unix.cpp  platform_executor_windows.cpp
xx-lib/src/detail/luavm_modules/: luavm_cpr.cpp  luavm_fs.cpp  luavm_json.cpp
xx-lib/src/detail/renderers/: inja_renderer.cpp
xx/include/: xxlib.hpp
xx/include/detail/: command.hpp  executor.hpp  helpers.hpp  luavm.hpp  parser.hpp  planner.hpp  platform.hpp  platform_executor.hpp
xx/include/detail/executors/: lua_executor.hpp  platform_executor.hpp
xx/src/: main.cpp
xx/src/detail/: cmd.cpp  command.cpp  executor.cpp  executor_unix.cpp  executor_windows.cpp  helpers.cpp  luavm.cpp  parser.cpp  planner.cpp  platform.cpp  platform_executor_unix.cpp  platform_executor_windows.cpp
xx/src/detail/executors/: lua_executor.cpp  platform_executor_unix.cpp  platform_executor_windows.cpp
